[package]
name = "dd_chunks"
version = "0.1.0"
authors = ["Rob Saunders <rob@wearebrandnew.com>"]

[dependencies]
vst2 = { git = "https://github.com/rust-dsp/rust-vst" }
log = "0.3"
simplelog = "0.4.2"
time = "0.1"
serde = "1.0"
serde_derive = "1.0.11"
bincode = "0.8"

[lib]
name = "dd_chunks"
crate-type = ["cdylib"]
